--- a/package.json
+++ b/package.json
@@ -1,26 +1,8 @@
 {
   "name": "entrega-github",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "node-sass --include-path scss scss/prueba.scss css/pruebacss.css",
-    "watch-css": "nodemon -e scss -x \"npm run build-css\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dbeguerie/LaCelina.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dbeguerie/LaCelina/issues"
-  },
-  "homepage": "https://github.com/dbeguerie/LaCelina#readme",
-  "devDependencies": {
-    "node-sass": "^7.0.1",
-    "nodemon": "^2.0.16"
-  },
   "dependencies": {
     "abbrev": "^1.1.1",
     "agent-base": "^6.0.2",
@@ -304,5 +286,23 @@
     "yargs": "^17.4.1",
     "yargs-parser": "^20.2.9"
   },
-  "description": ""
+  "devDependencies": {
+    "node-sass": "^7.0.1",
+    "nodemon": "^2.0.16"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-css": "node-sass --inlude-path scss scss/estilo.scss css/estilocss.css" ,
+    "watch-css": "nodemon -e scss -x \"npm run build-css\""
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dbeguerie/LaCelina.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/dbeguerie/LaCelina/issues"
+  },
+  "homepage": "https://github.com/dbeguerie/LaCelina#readme"
 }
